still having issues with content overlapping

--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -5,6 +5,7 @@
     --grey-2: #DDE2E5;
     --grey-2_5: #C4C4C4;
     --grey-3: #ACB5BD;
+    --grey-3_5: #90A0B7;
     --grey-4: #495057;
     --black: #212429;
 
@@ -52,4 +53,7 @@
     --modal-title-foreground: var(--dark-blue);
     --modal-description-foreground: var(--grey-4);
     --modal-backdrop-background: var(--grey-2_5);
+
+    --calendar-foreground: var(--dark-blue);
+    --calendar-foreground-days: var(--grey-3_5);
 }
